Fixed banner from covering up first equation

--- a/css/style.css
+++ b/css/style.css
@@ -45,16 +45,14 @@ a{
 }
 
 #header{
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 54px;
     background-color: #363636;
 }
 #headerTitle{
     color: white;
-    margin: 10px auto;
+    padding-top: 10px;
+    margin: 0px auto;
     text-align: center;
     font-size: 30px;
     font-family: carrington;
@@ -62,4 +60,15 @@ a{
 
 #my-menu a{
     color: white;
+}
+
+#wrapper{
+    z-index: 10000;
+}
+
+.mm-panel {
+    display: none !important;
+}
+.mm-panel.mm-current {
+    display: block !important;
 }
